--- a/React_Projects/step-form-material-vite/package.json
+++ b/React_Projects/step-form-material-vite/package.json
@@ -16,8 +16,10 @@
     "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
     "@mui/styled-engine-sc": "^5.14.6",
+    "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-router-dom": "^6.15.0",
     "styled-components": "^5.3.11",
     "zustand": "^4.4.1"
