--- a/React_Projects/step-form-material-vite/package.json
+++ b/React_Projects/step-form-material-vite/package.json
@@ -17,7 +17,10 @@
     "@mui/material": "^5.14.6",
     "@mui/styled-engine-sc": "^5.14.6",
     "axios": "^1.5.0",
+    "formik": "^2.4.3",
     "react": "^18.2.0",
+    "react-counter": "^1.1.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-router-dom": "^6.15.0",
