--- a/React_Projects/step-form-material-vite/package.json
+++ b/React_Projects/step-form-material-vite/package.json
@@ -25,6 +25,7 @@
     "react-google-charts": "^4.0.1",
     "react-router-dom": "^6.15.0",
     "styled-components": "^5.3.11",
+    "yup": "^1.2.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
