--- a/React_Projects/gscs_authentication/package.json
+++ b/React_Projects/gscs_authentication/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "universal-cookie": "^6.1.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
