--- a/React_Projects/gscs_authentication/package.json
+++ b/React_Projects/gscs_authentication/package.json
@@ -13,12 +13,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@hookform/resolvers": "^3.3.1",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "axios": "^1.5.0",
     "formik": "^2.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.15.0",
     "universal-cookie": "^6.1.1",
     "yup": "^1.2.0"
